feat: Implement ManageUserController for user management functionality
- Added ManageUserController to handle user CRUD operations, including adding, updating, deleting, and searching users.
- Integrated user role management and status toggling.
- Implemented input validation for user creation and updates.
- Enhanced user activity logging with ActivityLogger for user-related actions.

refactor: Update Activity model to use eager fetching for user relationships

- Changed the fetch type of the user relationship in the Activity model from LAZY to EAGER for improved performance in user activity retrieval.

feat: Extend ActivityRepository with new queries for activity statistics

- Added new queries to count activities by day, type, and to retrieve recent registered users.
- Implemented methods to fetch top active users based on activity data.

feat: Introduce BookRepository method for recent books retrieval

- Added method to fetch the top 10 recently added books.

feat: Enhance ActivityService with chart data retrieval methods

- Implemented methods to gather activity data for charts, including daily activity counts and activity types.
- Added functionality to retrieve recent registered users.

feat: Create ActivityLogger for centralized activity logging

- Introduced ActivityLogger to encapsulate logging logic for various user actions, including user management and book transactions.

style: Update FXML files for admin views to use new controller paths

- Refactored FXML files for admin views to point to the correct controller packages.
- Enhanced layout and structure for better user experience in the admin dashboard.